# traq-bot-kenken

./: .env.dev  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
game/akinator/: Cargo.toml
game/akinator/src/: cli.rs  error.rs  lib.rs  utils.rs
scripts/: test-dm-created.sh  test.sh
src/: akinator.rs  bot.rs  main.rs  repository.rs  router.rs
src/akinator/: cli.rs  utils.rs
src/bot/: game.rs  message.rs
src/bot/game/: aki.rs
src/github/: client.rs  mod.rs
src/github/gql/: query.graphql  query.rs
