[package]
name = "traq-bot-kenken"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.5"
graphql_client = "0.14.0"
http = "1.1.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
traq = "0.1.4"
traq-bot-http = "0.9.0"
